# kantonq

./: Cargo.toml  README.md  go.mod
.github/workflows/: ci-api.yml  ci-web.yml  ci.yml  deploy-api.yml  deploy.yml
api/: .htaccess  composer.json  index.php  robots.txt
src/: main.rs  model.rs  repository.rs
web/: .gitignore  .oxfmtrc.json  .oxlintrc.json  astro.config.mjs  package-lock.json  package.json  tailwind.config.js  tsconfig.json
web/.github/workflows/: ci.yml  deploy.yml
web/src/: app.css  env.d.ts
web/src/components/: Head.astro  Layout.astro
web/src/lib/: utils.ts
web/src/lib/components/: app-sidebar.svelte  auth-guard.svelte  auth-redirect.svelte  dropdown.ts  guest-guard.svelte  header.svelte  login-form.svelte  mode-toggle.svelte  nav-user.svelte  team-switcher.svelte
web/src/lib/components/login-03/: +page.svelte
web/src/lib/components/sidebar-07/: +page.svelte
web/src/lib/scss/base/: _font.scss
web/src/lib/services/: google-oauth.ts
web/src/lib/stores/: auth.ts
web/src/lib/types/: google.d.ts
web/src/pages/: dashboard.astro  index.astro  login.astro
web/src/routes/: +page.svelte
web/src/routes/login/: +page.svelte
web/tests/: performance.test.js
