[package]
name = "kantonq"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
futures = "0.3.31"
chrono = "0.4.38"
confik = "0.12.0"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
dotenvy = "0.15.7"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.12"
derive_more = { version = "1.0.0", features = ["full"] }